# WeeChatRS

./: .dockerignore  .gitignore  BUILDING.md  CONTACT.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO_soju.md  build-linux.sh  build-macos.sh  build-windows.sh  build.rs  checklist.md  todo.md
assets/: icon.icns
docker/: Dockerfile.linux-aarch64  Dockerfile.linux-x86_64  Dockerfile.windows-aarch64  Dockerfile.windows-x86_64
src/: main.rs
src/relay/: backend.rs  client.rs  mod.rs  models.rs
src/relay/irc/: connection.rs  mod.rs  parser.rs
src/relay/weechat/: event_handler.rs  mod.rs
src/ui/: ansi.rs  app.rs  emoji.rs  event_handler.rs  fileshare.rs  fonts.rs  input.rs  keybinds.rs  mod.rs  notify.rs  np.rs  secure_storage.rs  settings.rs  ssh_tunnel.rs  sysinfo.rs  theme.rs  url_safety.rs  wallpaper.rs
