[package]
name = "weechat-rs"
version = "0.3.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
egui = "0.27.2"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
plist = "1.6"
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
notify-rust = "4.11"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
fontdb = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-tls = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
