[package]
name = "weechat-rs"
version = "0.7.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
egui = "0.27.2"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
plist = "1.6"
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "multipart"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
fontdb = "0.22"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-tls = "0.2"
tokio-native-tls = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
objc2-user-notifications = { version = "0.3", features = [
    "UNUserNotificationCenter",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotification",
    "block2",
] }
objc2 = ">=0.6.2, <0.8.0"
objc2-foundation = { version = "0.3", features = ["NSString"] }
block2 = ">=0.6.1, <0.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
notify-rust = "4.11"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["async-secret-service", "tokio", "crypto-rust"] }
openssl = { version = "0.10", features = ["vendored"] }
# Direct DBus call to org.freedesktop.Notifications — replaces notify-rust on
# Linux for full control over hints (image-data, urgency, category, etc.).
zbus = { version = "4", default-features = false, features = ["tokio"] }

[build-dependencies]
winres = "0.1"
